--- a/package.json
+++ b/package.json
@@ -6,16 +6,26 @@
   "scripts": {
     "lint": "eslint src/",
     "build": "webpack --mode production",
-    "start": "webpack serve --mode development"
+    "start": "webpack serve --mode development --open"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^10.2.4",
-    "eslint": "8.13.0",
-    "eslint-config-htmlacademy": "5.1.2",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
+    "@babel/core": "7.18.6",
+    "@babel/preset-env": "7.18.6",
+    "babel-loader": "8.2.5",
+    "copy-webpack-plugin": "10.2.4",
+    "eslint": "8.19.0",
+    "eslint-config-htmlacademy": "6.0.0",
+    "webpack": "5.73.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.9.3"
   },
+  "browserslist": [
+    "last 2 versions",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all",
+    "not < 0.25%"
+  ],
   "engines": {
     "node": "16"
   }
